--- a/styles.css
+++ b/styles.css
@@ -13,4 +13,93 @@ body {
     padding: 0;
     margin: 0;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-center {
+    border: 1px solid #000;
+    border-radius: 10px;
+    padding: 3rem;
+    width: 800px;
+}
+
+.form-container,
+.grocery-container {
+    width: 80%;
+    margin: auto;
+}
+
+.form-container {
+    margin-bottom: 2rem;
+}
+
+.form-container h3 {
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 1.4rem;
+    color: rgb(56, 56, 56);
+}
+
+.form-controls {
+    display: flex;
+    justify-content: space-between;
+}
+
+input {
+    width: 80%;
+    margin-right: 0.4rem;
+    padding: 0.6rem 1rem;
+    border-radius: 4px;
+    border: none;
+}
+
+.form-btn {
+    padding: 0rem 2rem;
+    border: none;
+    background: rgb(56, 56, 56);
+    color: #fff;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.grocery-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgb(236, 236, 236);
+    border-radius: 10px;
+    padding: 0rem 1rem;
+}
+
+.title {
+    margin: 0.7rem 0rem;
+}
+
+.edit-btn,
+.delete-btn {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.edit-btn {
+    color: green;
+}
+
+.delete-btn {
+    color: red;
+}
+
+.clear-btn {
+    margin-top: 3rem;
+    display: block;
+    margin: 3rem auto 0rem;
+    background: transparent;
+    border: none;
+    font-size: 1rem;
+    color: rgb(255, 108, 108);
+    cursor: pointer;
 }
